Adicionadas entidades(Cidade e Estado), endpoint versao e configurado banco de dados H2.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,18 @@
+### VERSAO DA API ###
+application.versionAPI=v@pom.version@@version.api@
+application.versionWithAPI=@pom.version@-@version.api@
 
+### PORTA DO SERVIDOR ###
+server.port = 8091
+
+### CONFIGURACAO PADRAO DO SPRINGBOOT PARA O BANCO DE DADOS H2 ###
+spring.datasource.url = jdbc:h2:mem:h2db
+spring.datasource.driverClassName = org.h2.Driver
+spring.datasource.username = sa
+spring.datasource.password = 
+
+### PROPRIEDADE PARA HABILITAR O CONSOLE PARA O BANCO DE DADOS H2 ###
+### BROWSER URL CONSOLE: http://localhost:8091/h2-console ###
+spring.h2.console.enabled = true
+
+spring.jpa.hibernate.show_sql=true
