--- a/pom.xml
+++ b/pom.xml
@@ -13,12 +13,15 @@
 
 	<groupId>com.interview</groupId>
 	<artifactId>spring-boot-interview</artifactId>
-	<version>0.0.1</version>
+	<version>0.0.1-</version>
 	<name>spring-boot-interview</name>
 	<description>Demo project for Spring Boot</description>
 
 	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
+		<version.api>1.0</version.api>
 	</properties>
 
 	<dependencies>
