Adicionado Swagger ao projeto.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,16 @@
 application.versionAPI=v@pom.version@@version.api@
 application.versionWithAPI=@pom.version@-@version.api@
 
+#CONFIGURACAO DO SWAGGER
+swagger.titulo=API WSINTERVIEW
+swagger.descricao=Sistema de Gerenciamento Interno.
+swagger.termoDeUso=http://www.fabiocampellodeveloper.com.br/termoDeUso.html
+swagger.licenca=Todos os direitos reservados.
+swagger.licencaUrl=http://www.fabiocampellodeveloper.com.br/licenca.html
+swagger.contatoNome=Fabio Campello
+swagger.contatoSite=https://fabiocampello.github.io/
+swagger.contatoEmail=fabiocampellodeveloper@gmail.com
+
 ### PORTA DO SERVIDOR ###
 server.port = 8091
 
