Adicionado endpoint recupera cliente pelo id.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ application.versionWithAPI=@pom.version@-@version.api@
 
 #CONFIGURACAO DO SWAGGER
 swagger.titulo=API WSINTERVIEW
-swagger.descricao=Sistema de Gerenciamento Interno.
+swagger.descricao=Interview System
 swagger.termoDeUso=http://www.fabiocampellodeveloper.com.br/termoDeUso.html
 swagger.licenca=Todos os direitos reservados.
 swagger.licencaUrl=http://www.fabiocampellodeveloper.com.br/licenca.html
